--- a/app/services.yml
+++ b/app/services.yml
@@ -13,7 +13,7 @@ parameters:
         cache:
             livetime: %cache_livecycle%
 
-    static_dir: static
+    static_dir: "%root%/static"
 
     db:
         login: ~
@@ -29,7 +29,38 @@ parameters:
 
     session_storage: "@session.storage.pdo"
 
+    monolog:
+        handlers:
+            rotating_handler:
+                type: rotating
+                path: runtime/logs/logs.txt
+                max: 5
+            fire_handler:
+                type: firephp
+
 services:
+    cms_channel:
+        class: Monolog\Logger
+        arguments: ["cms", ["@rotating_handler", "@fire_handler"]]
+
+    logger:
+        class: Module\Monolog\Logger\Logger
+        arguments: ["@cms_channel"]
+
+    db_channel:
+        class: Monolog\Logger
+        arguments: ["db", ["@rotating_handler", "@fire_handler"]]
+
+    db_logger:
+        class: Module\Monolog\Logger\Logger
+        arguments: ["@db_channel"]
+
+    db:
+        class: Sfcms\db
+        arguments: ["@pdo"]
+        calls:
+            - [setLoggerClass, ["@db_logger"]]
+
     pdo:
         class: Sfcms\PDO
         arguments:
@@ -53,9 +84,7 @@ services:
         class: Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler
         arguments: ["@pdo", "%pdo_session%"]
 
-    db:
-        class: Sfcms\db
-        arguments: ["@pdo"]
+
 
     smarty:
         class: Smarty
