--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,9 @@
         "phpunit/phpunit-mock-objects": "1.2.*",
         "phpunit/php-code-coverage": "1.2.*",
         "phpunit/php-file-iterator": "1.3.*",
-        "phpunit/phpunit-selenium": "1.2.*"
+        "phpunit/phpunit-selenium": "1.2.*",
+        "firephp/firephp-core": "v0.4.0",
+        "ccampbell/chromephp": "4.0.0"
     },
     "require": {
         "php": ">=5.3.3",
@@ -53,8 +55,6 @@
         "symfony/yaml": "2.3.*",
         "smarty/smarty": "3.1.*",
         "monolog/monolog": "1.6.*",
-        "firephp/firephp-core": "v0.4.0",
-        "ccampbell/chromephp": "4.0.0",
         "swiftmailer/swiftmailer": "v5.0.0",
         "kriswallsmith/assetic": "v1.1.1",
         "symfony/stopwatch": "2.3.*",
