--- a/app/parameters.yml.dist
+++ b/app/parameters.yml.dist
@@ -10,14 +10,20 @@ parameters:
         class: "Sfcms\Cache\CacheBlank"
         livecycle: 0
 
+    db_name: siteforever
+    db_login: root
+    db_password: ~
+    db_migration: true
+    db_debug: true
+
     db:
-        dsn: "mysql:host=localhost;dbname=siteforever"
-        login: root
-        password: ~
+        dsn: "mysql:host=localhost;dbname=%db_name%"
+        login: "%db_login%"
+        password: "%db_password%"
         options:
             1002: "SET NAMES utf8"
-        migration: true
-        debug: false
+        migration: "%db_migration%"
+        debug: "%db_debug%"
 
     editor: ckeditor
     # editor: tinymce
@@ -28,5 +34,10 @@ parameters:
     logging_handlers: ["@rotating_handler"]
 
     mailer_transport: sendmail
+    mailer_username: ~
+    mailer_password: ~
+    mailer_host: ~
+    mailer_port: ~
+    mailer_security: ~
     pager_template: pager_twbt
 
