event-orient architecture for market.order module new method Order->isSale() indicated about enabled discount add controller object to container before dispatch Sfcms\Delivery renamed to Sfcms\DeliveryManager New global js events "sfcms.form.beforeSubmit" and "sfcms.form.error" on ajax form

--- a/.htaccess
+++ b/.htaccess
@@ -5,9 +5,9 @@ Options -MultiViews
 Options -Indexes
 
 php_flag  display_errors            on
-php_value error_reporting           15
+php_value error_reporting           E_ALL
 
-php_flag    xdebug.auto_trace       on
+php_flag    xdebug.auto_trace       off
 php_flag    xdebug.remote_enable    on
 
 php_flag session.cookie_httponly    off
