--- a/app/services.yml
+++ b/app/services.yml
@@ -89,10 +89,11 @@ services:
         class: Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler
         arguments: ["@pdo", "%pdo_session%"]
 
-
-
     smarty:
         class: Smarty
+        properties:
+            compile_check: true
+            force_compile: "%debug%"
 
     tpl_directory:
         class: Sfcms\Tpl\Directory
