--- a/class/Module/Catalog/config.yml
+++ b/class/Module/Catalog/config.yml
@@ -10,3 +10,9 @@ services:
         arguments: [ @mailer, @tpl, %email_for_comments% ]
         tags:
             - { name: event.subscriber }
+
+    catalog.dashbord.subscriber:
+        class: Module\Catalog\Subscriber\DashboardSubscriber
+        arguments: [ @tpl ]
+        tags:
+            - { name: event.subscriber }
