--- a/class/Module/Monolog/config.yml
+++ b/class/Module/Monolog/config.yml
@@ -1,19 +1,19 @@
 parameters:
-    monolog:
-        handlers:
-            rotating_handler:
-                type: rotating
-                path: runtime/logs/logs.txt
-                max: 5
-            fire_handler:
-                type: firephp
 
-    logging_handlers: ["@rotating_handler", "@fire_handler"]
+logger:
+    handlers:
+        rotating_handler:
+            type: rotating
+            path: runtime/logs/logs.txt
+            max: 5
+        fire_handler:
+            type: firephp
 
 services:
     cms_channel:
         class: Monolog\Logger
-        arguments: ["cms", %logging_handlers%]
+        arguments: ["cms", ["@rotating_handler"]]
+#        arguments: ["cms", ["@rotating_handler", "@fire_handler"]]
 
     logger:
         class: Module\Monolog\Logger\Logger
@@ -21,7 +21,8 @@ services:
 
     db_channel:
         class: Monolog\Logger
-        arguments: ["db", %logging_handlers%]
+        arguments: ["db", ["@rotating_handler"]]
+#        arguments: ["db", ["@rotating_handler", "@fire_handler"]]
 
     db_logger:
         class: Module\Monolog\Logger\Logger
