refactoring router on event dispatcher

--- a/class/Module/System/database.yml
+++ b/class/Module/System/database.yml
@@ -12,8 +12,8 @@ services:
     db:
         class: Sfcms\db
         arguments: ["@pdo"]
-#        calls:
-#            - [setLoggerClass, ["@db_logger"]]
+        calls:
+            - [setLoggerClass, ["@db_logger"]]
 
     pdo:
         class: Sfcms\PDO
