--- a/class/Module/System/config.yml
+++ b/class/Module/System/config.yml
@@ -27,7 +27,24 @@ services:
         calls:
             - [setLanguage, ["%language%"]]
 
+    # routing
+    route_yaml:
+        class: Sfcms\Route\YmlRoute
+        tags:
+            - { name: event.listener, event: router.route , method: route }
+
+    route_structure:
+        class: Sfcms\Route\StructureRoute
+        calls:
+            - [setLogger, ["@logger"]]
+        tags:
+            - { name: event.listener, event: router.route , method: route }
+
     router:
         class: Sfcms\Router
+        arguments: ["%debug%"]
         calls:
+            - [setEventDispatcher, ["@event.dispatcher"]]
+            - [setRequest, ["@?request="]]
+            - [setLogger, ["@logger"]]
             - [setRewrite, ["%url%"]]
