allocated database module

--- a/class/Module/Database/config.yml
+++ b/class/Module/Database/config.yml
@@ -18,10 +18,10 @@ services:
     pdo:
         class: Sfcms\PDO
         arguments:
-            params: "%model%"
+            params: "%database%"
         calls:
             - [setAttribute, [3, 2]] # \PDO::ATTR_ERRMODE, \PDO::ERRMODE_EXCEPTION
 
-    data_manager:
+    data.manager:
         class: Sfcms\Data\Manager
         arguments: [ "@service_container" ]
