correct session configuration

--- a/app/config_dev.yml
+++ b/app/config_dev.yml
@@ -2,5 +2,9 @@ imports:
     - { resource: "app/services.yml" }
     - { resource: "app/parameters.yml" }
 
+system:
+    session:
+        storage: handler
+        handler: native
 
 services:
