--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
         "symfony/dependency-injection": "2.3.*",
         "symfony/routing": "2.3.*",
         "symfony/yaml": "2.3.*",
+        "symfony/translation": "2.3.*",
         "smarty/smarty": "v3.1.14",
         "incenteev/composer-parameter-handler": "~2.0",
         "monolog/monolog": "1.6.*",
