--- a/app/config_dev.yml
+++ b/app/config_dev.yml
@@ -1,13 +1,2 @@
 imports:
-    - { resource: "app/services.yml" }
-    - { resource: "app/parameters.yml" }
-
-system:
-    session:
-        storage: handler
-        handler: native
-
-translator:
-    locale: %language%
-
-services:
+    - { resource: "app/config.yml" }
