--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name" : "keltanas/site-forever-cms",
     "description": "Simple CMS for PHP and MySQL",
-    "keywords": [ "siteforever", "cms", "smarty", "php", "keltanas" ],
+    "keywords": [ "siteforever", "cms", "smarty", "php", "keltanas", "firetroop" ],
     "homepage": "http://siteforever.ru",
     "license": "MIT",
     "authors" : [
@@ -53,13 +53,13 @@
         "symfony/routing": "2.3.*",
         "symfony/yaml": "2.3.*",
         "symfony/translation": "2.3.*",
-        "smarty/smarty": "v3.1.14",
-        "incenteev/composer-parameter-handler": "~2.0",
-        "monolog/monolog": "1.6.*",
-        "swiftmailer/swiftmailer": "v5.0.1",
-        "kriswallsmith/assetic": "v1.1.2",
         "symfony/stopwatch": "2.3.*",
         "symfony/debug": " 2.3.*",
+        "smarty/smarty": "~3.1",
+        "incenteev/composer-parameter-handler": "~2.0",
+        "monolog/monolog": "~1.6",
+        "swiftmailer/swiftmailer": "~5.0",
+        "kriswallsmith/assetic": "~1.1",
         "helios-ag/fm-elfinder": "v2.0",
         "tonytomov/jqGrid" : "4.4",
         "leafo/lessphp": "~0.4"
