--- a/class/Module/Catalog/Translate/messages.ru.yml
+++ b/class/Module/Catalog/Translate/messages.ru.yml
@@ -1,5 +1,9 @@
 'Product types': 'Типы товаров'
 'Materials': 'Материалы'
 'Catalogue': 'Каталог'
-'Name': 'Наименование'
-'Price': 'Цена'
+'name': 'наименование'
+'sorting': 'сортировка по'
+'price': 'цена'
+'price-a': 'цена возр.'
+'price-d': 'цена убыв.'
+'categories': 'категории'
