--- a/class/Module/Smarty/Translate/messages.ru.yml
+++ b/class/Module/Smarty/Translate/messages.ru.yml
@@ -1,2 +1,2 @@
-'"{label}" is required': '"{label}" нужно заполнить'
-'"{label}" not corresponded specified format': '"{label}" не соответствует формату'
+'"%label%" is required': '"%label%" нужно заполнить'
+'"%label%" not corresponded specified format': '"%label%" не соответствует формату'
