--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "~2.3",
+        "symfony/symfony": "2.3.*",
         "smarty/smarty": "~3.1",
         "incenteev/composer-parameter-handler": "~2.0",
         "monolog/monolog": "~1.6",
