--- a/class/Module/Guestbook/Translate/guestbook.ru.yml
+++ b/class/Module/Guestbook/Translate/guestbook.ru.yml
@@ -12,3 +12,6 @@
 'Send': 'Отправить'
 'Refresh': 'Обновить'
 'Edit message': 'Редактирование сообщения'
+letter:
+    title: 'Сообщение из гостевой'
+    text: 'Текст сообщения'
