--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,7 @@
         "symfony/dependency-injection": "2.3.*",
         "symfony/routing": "2.3.*",
         "symfony/yaml": "2.3.*",
-        "smarty/smarty": "v3.1.14",
+        "smarty/smarty": "3.1.*",
         "incenteev/composer-parameter-handler": "~2.0",
         "monolog/monolog": "1.6.*",
         "swiftmailer/swiftmailer": "v5.0.1",
