--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,7 @@
         "symfony/dependency-injection": "2.3.*",
         "symfony/routing": "2.3.*",
         "symfony/yaml": "2.3.*",
-        "smarty/smarty": "v3.1.14",
+        "smarty/smarty": "3.1.*",
         "incenteev/composer-parameter-handler": "~2.0",
         "monolog/monolog": "1.6.*",
         "swiftmailer/swiftmailer": "v5.0.1",
@@ -91,7 +91,7 @@
     "extra": {
         "sfcms-static-dir" : "static",
         "branch-alias": {
-            "dev-master": "0.5-dev"
+            "dev-master": "0.6-dev"
         },
         "incenteev-parameters": {
             "file": "app/parameters.yml",
