Подключение статических активов #sf-79 fixed

--- a/app/config.yml
+++ b/app/config.yml
@@ -17,8 +17,9 @@ logger:
             path: "%root%/runtime/logs/%env%.txt"
 
 page: ~
-
+ckeditor: ~
 elfinder: ~
+jqgrid: ~
 
 assetic:
     debug: %debug%
