--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "autoload": {
         "psr-0" : {
-            "" : ["class/","lib/"],
+            "" : ["class/","src/"],
             "Sfcms" : "class/",
             "Module" : ["class/"],
             "Forms" : ["class/"]
@@ -33,33 +33,16 @@
         "phpunit/phpunit-mock-objects": "1.2.*",
         "phpunit/php-code-coverage": "1.2.*",
         "phpunit/php-file-iterator": "1.3.*",
-        "phpunit/phpunit-selenium": "1.2.*",
-        "firephp/firephp-core": "v0.4.0",
-        "ccampbell/chromephp": "4.0.0"
+        "phpunit/phpunit-selenium": "1.2.*"
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/browser-kit": "2.3.*",
-        "symfony/config": "2.3.*",
-        "symfony/console": "2.3.*",
-        "symfony/dom-crawler": "2.3.*",
-        "symfony/css-selector": "2.3.*",
-        "symfony/event-dispatcher": "2.3.*",
-        "symfony/filesystem": "2.3.*",
-        "symfony/finder": "2.3.*",
-        "symfony/http-foundation": "2.3.*",
-        "symfony/process": "2.3.*",
-        "symfony/security": "2.3.*",
-        "symfony/dependency-injection": "2.3.*",
-        "symfony/routing": "2.3.*",
-        "symfony/yaml": "2.3.*",
+        "symfony/symfony": "2.4.*",
         "smarty/smarty": "3.1.*",
         "incenteev/composer-parameter-handler": "~2.0",
         "monolog/monolog": "1.6.*",
         "swiftmailer/swiftmailer": "v5.0.1",
         "kriswallsmith/assetic": "v1.1.2",
-        "symfony/stopwatch": "2.3.*",
-        "symfony/debug": " 2.3.*",
         "helios-ag/fm-elfinder": "v2.0",
         "tonytomov/jqGrid" : "4.4"
     },
@@ -91,7 +74,7 @@
     "extra": {
         "sfcms-static-dir" : "static",
         "branch-alias": {
-            "dev-master": "0.6-dev"
+            "dev-master": "0.5-dev"
         },
         "incenteev-parameters": {
             "file": "app/parameters.yml",
