Редизайн управления структурой #sf-83 fixed

--- a/class/Module/Page/Translate/messages.ru.yml
+++ b/class/Module/Page/Translate/messages.ru.yml
@@ -1,3 +1,4 @@
 'Create page': 'Создать страницу'
 'Edit page': 'Редактировать страницу'
 'Input Name': 'Введите Имя'
+'Save and close': 'Сохранить и закрыть'
